# AlicorpAIGen

./: .gitignore  README.md
backend/: .env.example  Dockerfile  database.sql  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/dependencies/: __init__.py  auth.py
backend/app/models/: __init__.py  auditoria.py  brand_manual.py  contenido.py  user.py
backend/app/routers/: __init__.py  auditoria.py  auth.py  brand.py  contenido.py
backend/app/services/: __init__.py  gemini_service.py  groq_service.py  langfuse_service.py  rag_engine.py
frontend/: .env.example  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/dashboard/admin/: page.tsx
frontend/src/app/dashboard/aprobador-a/: page.tsx
frontend/src/app/dashboard/aprobador-b/: page.tsx
frontend/src/app/dashboard/creador/: page.tsx
frontend/src/components/: Alert.tsx  Badge.tsx  Button.tsx  Card.tsx  DashboardLayout.tsx  Header.tsx  Input.tsx  Loading.tsx  Select.tsx  index.ts
frontend/src/components/dashboard/: AuditoriaCard.tsx  ContentList.tsx  ManualList.tsx  StatsCard.tsx  index.ts
frontend/src/hooks/: index.ts  useAuth.ts
frontend/src/lib/: AuthContext.tsx  api.ts
frontend/src/types/: index.ts
