[project]
name = "app"
version = "0.1.0"
description = "Content Suite - AI Brand Consistency System"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.0.0",
    "groq>=0.8.0",
    "langfuse>=2.0.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib==1.7.4",
    "bcrypt==4.0.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "tenacity>=8.0.0",
    "google-genai>=1.64.0",
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
